src/snapshots/antsi__parser__tests__parse_unescaped_open_parenthesis_in_plaintext@errors.snap
---
source: src/parser.rs
description: before ( after
---
[
    ParseError {
        span: Some(
            7..8,
        ),
        at: ParenthesisOpen,
        reason: UnescapedControlCharacter(
            '(',
        ),
    },
]
