src/snapshots/antsi__parser__tests__parse_unescaped_open_square_bracket_in_plaintext.snap
---
source: src/parser.rs
description: "before [ after"
---
[
    ParseError {
        span: Some(
            8..14,
        ),
        at: Text,
        reason: Expected(
            [
                ForegroundSpecifier,
                BackgroundSpecifier,
                DecorationSpecifier,
            ],
        ),
    },
    ParseError {
        span: Some(
            8..14,
        ),
        at: Text,
        reason: Expected(
            [
                Eof,
            ],
        ),
    },
]
