src/snapshots/antsi__parser__tests__parse_unescaped_open_square_bracket_in_plaintext@errors.snap
---
source: src/parser.rs
description: "before [ after"
---
[
    Error {
        span: Some(
            8..9,
        ),
        at: Whitespace,
        reason: Expected(
            [
                ForegroundSpecifier,
                BackgroundSpecifier,
                DecorationSpecifier,
            ],
        ),
    },
    Error {
        span: Some(
            8..9,
        ),
        at: Whitespace,
        reason: Expected(
            [
                Eof,
            ],
        ),
    },
]
