src/snapshots/antsi__parser__tests__parse_unescaped_open_square_bracket_in_token@errors.snap
---
source: src/parser.rs
description: "[fg:red](before [ after)"
---
[
    Error {
        span: Some(
            17..18,
        ),
        at: Whitespace,
        reason: Expected(
            [
                ForegroundSpecifier,
                BackgroundSpecifier,
                DecorationSpecifier,
            ],
        ),
    },
    Error {
        span: Some(
            17..18,
        ),
        at: Whitespace,
        reason: Expected(
            [
                Eof,
            ],
        ),
    },
    Error {
        span: Some(
            23..24,
        ),
        at: ParenthesisClose,
        reason: UnescapedControlCharacter(
            ')',
        ),
    },
]
